# blink

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/superpowers/plans/: 2026-05-07-windows-ssh-agent.md
docs/superpowers/specs/: 2026-05-07-windows-ssh-agent-design.md
src/: checkpoint.rs  config.rs  error.rs  highlight.rs  known_hosts.rs  main.rs  paths.rs  preview.rs  session.rs  theme.rs  transfer.rs
src/transfer/: dispatcher.rs
src/transport/: ftp.rs  ftp_impl.rs  ftps.rs  mod.rs  scp.rs  sftp.rs
src/tui/: app.rs  event.rs  mod.rs  views.rs  widgets.rs
