[package]
name = "blink"
version = "0.1.8"
edition = "2024"
description = "A terminal SFTP/SCP/FTP/FTPS client with a three-pane TUI"
license = "MIT"
authors = ["blink contributors"]
repository = "https://github.com/yukaia/blink"
readme = "README.md"

[[bin]]
name = "blink"
path = "src/main.rs"

[dependencies]
# TUI framework + terminal
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"
futures = "0.3"

# SSH / SFTP (pure-Rust async)
russh = "0.49"
russh-sftp = "2.0"

# FTP / FTPS
suppaftp = { version = "8.0", features = ["tokio", "rustls-ring", "tokio-rustls-ring"] }
webpki-roots = "0.26"
tokio-rustls = "0.26"

# Config / serialization
rust-ini = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cross-platform paths
directories = "5"

# CLI
clap = { version = "4", features = ["derive"] }

# Errors
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Image preview
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
base64 = "0.22"
icy_sixel = "0.5"

# Misc
chrono = { version = "0.4", default-features = false, features = ["clock"] }
bytes = "1"
parking_lot = "0.12"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
